# python-librovore

./: .gitattributes  README.rst  pyinstaller.spec  pyproject.toml
.auxiliary/: .gitignore
.auxiliary/configuration/: conventions.md  copier-answers--agents.yaml  copier-answers.yaml  mcp-servers.json  vulturefood.py
.auxiliary/notes/: alpha-qa-hacks.md  better-error-messages-implementation-plan.md  cache-configuration-design.md  cache-configuration-refactor-plan.md  cache-installation-refactor.md  cacheproxy-testing-plan.md  capability_advertisement_implementation_plan.md  capability_advertisement_proposal.md  cli-framework-migration--progress.md  cli-framework.md  cli-rendering-refactor--progress.md  command-consolidation-plan.md  content-id.md  content_extraction_diagnosis.md  current_status.md  design-plan.md  detection-result-object-design-issue.md  detection-testing-plan.md  detection_architecture_refactor_plan.md  develop-flag-implementation.md  development-status.md  documentation-extraction-plan.md  dual-registry-implementation-plan.md  enhanced-ux-feedback-plan.md  exception-renderers--progress.md  exception-renderers.md  explore-function-design.md  final_search_architecture.md  (+67 more)
documentation/: api.rst  architecture.rst  changelog.rst  conf.py  contribution.rst  devapi.rst  prd.rst
tests/: README.md
tests/fixtures/broken-extension/: pyproject.toml
tests/fixtures/broken-extension/broken_extension/: __init__.py
tests/fixtures/fake-extension/: README.md  pyproject.toml
tests/fixtures/fake-extension/fake_extension/: __init__.py  data.pth  processor.py
(+235 files in other folders)
